@@ -5,6 +5,7 @@ Version 2024.xxxxx (xxxxx 2024)
 - Implemented: Event Editor, storing/loading opened events
 - Implemented: Hour chart for P1 log
 - Implemented: OpenWeatherMap, API 3.0 support
+- Implemented: Event Editor, Close/Close All menu dropdown
 - Fixed: Floorplan, better detection of switches
 - Fixed: Hardware Setup, hiding extra parameters when selecting a python plugin
 - Fixed: PythonEx framework, two notifications where send for switch type devices
